<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.datamatrixMedicineScan.UI.ProductsListActivity" >

    <TextView
        android:id="@+id/pia_productCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pla_searchFieldString" />

    <EditText
        android:id="@+id/pla_searchFieldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pla_productListString" />

    <ListView
        android:id="@+id/pla_productList"
        android:layout_width="match_parent"
        android:layout_height="146dp" >
    </ListView>

    <Button
        android:id="@+id/pla_goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_mainReturnString" />

</LinearLayout>
